@@ -1,3 +1,8 @@
+2013-10-02 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/ajax/visual_console_builder.ajax.php: fixed update the
+	label.
+
 2013-10-02  Sergio Martin <sergio.martin@artica.es>
 
 	* include/javascript/jquery.pandora.js: Increase width of modal
